--- a/assets/style.css
+++ b/assets/style.css
@@ -189,7 +189,22 @@ pre {
     color: #BB9966;
 }
 
+.sideways-align {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .backlinks-list {
+    margin-top: 5px;
     padding: 5px;
     font-size: 12px;
+    flex: 1 0 auto;
+}
+
+.time-edit {
+    margin-top: 5px;
+    font-size: 12px;
+    font-family: victor-mono;
+    padding: 5px;
+    flex: 0 0 auto;
 }
