--- a/template/main.html
+++ b/template/main.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <h1><a href='$index_path$.html'><span style='color: #DB6913; font-family: baskerville; font-size: 35px;'>Warm</span><span style='font-family: victor-mono; color: #8DD;'>Cyan</span></a></h1>
+            <h1><a href='$index_path$.html'><span style='color: #AA6633; font-family: baskerville; font-size: 35px;'>Warm</span><span style='font-family: victor-mono; color: #8DD;'>Cyan</span></a></h1>
 
             $if(toc)$
             <label id='nav-hamburger-icon' for="nav-hamburger">
