--- a/assets/style.css
+++ b/assets/style.css
@@ -56,8 +56,15 @@ h3 {
     /* color: #DB6913; */
     color: #AA6633;
 }
+ 
+h2 {
+    margin-top: 22px;
+    margin-bottom: 18px;
+}
 
 h1 {
+    margin-top: 32px;
+    margin-bottom: 25px;
     font-family: baskerville; 
     /* color: #BBF3FF; */
     /* color: #FFDDAA; */
@@ -109,6 +116,8 @@ header {
 }
 header h1 {
     padding-left: 20px;
+    margin-top: 21px;
+    margin-bottom: 21px;
 }
 header a {
     text-decoration: none;
@@ -204,7 +213,7 @@ pre {
     padding-right: 20px;
     padding-left: 20px;
     min-width: 250px;
-    margin-top: 15px;
+    margin-top: 25px;
 }
 .TOC a {
     font-size: 14px;
