--- a/assets/style.css
+++ b/assets/style.css
@@ -143,7 +143,9 @@ footer {
 
 pre {
     /* background-color: #101618; */
-    padding: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 5px;
     padding-left: 20px;
     padding-right: 20px;
     /* border-left: 2px solid #88DDFF; */
