--- a/assets/style.css
+++ b/assets/style.css
@@ -151,10 +151,12 @@ header a {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    line-height: 1.8;
 }
 #container strong {
     color: #BF9;
+}
+#container p {
+    line-height: 1.8;
 }
 main {
     padding: 10px;
@@ -247,6 +249,7 @@ pre {
     padding-left: 20px;
     min-width: 250px;
     margin-top: 25px;
+    line-height: 1.8;
 }
 .TOC a {
     font-size: 14px;
