Fix text color from being too bright

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,7 +59,8 @@ html, body {
 body {
     background-color: #221811;
     /* background-color: #191007; */
-    color: white;
+    /* color: white; */
+    color: #DCA;
     font-family: baskerville;
     
     display: flex;
