--- a/assets/style.css
+++ b/assets/style.css
@@ -78,15 +78,18 @@ h3 {
     letter-spacing: -0.022em;
     /* color: #DB6913; */
     color: #AA6633;
+    margin-top: 40px;
+    margin-bottom: 5px;
 }
  
 h2 {
-    margin-top: 22px;
+    /* margin-top: 22px; */
+    margin-top: 60px;
     margin-bottom: 18px;
 }
 
 h1 {
-    margin-top: 32px;
+    margin-top: 62px;
     margin-bottom: 25px;
     font-family: baskerville; 
     /* color: #BBF3FF; */
@@ -96,7 +99,8 @@ h1 {
 
 code {
     font-family: victor-mono;
-    color: #FFDDAA;
+    /* color: #FFDDAA; */
+    color: white;
 }
 
 a {
@@ -158,6 +162,7 @@ header a {
 }
 #container p {
     line-height: 1.8;
+    margin-top: 30px;
 }
 main {
     padding: 10px;
