--- a/assets/style.css
+++ b/assets/style.css
@@ -156,6 +156,8 @@ header a {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+    padding: 10px;
+    margin-top: -30px;
 }
 #container strong {
     color: #BF9;
@@ -238,11 +240,13 @@ pre {
 #menu-toc .TOC {
     margin-right: 0px;
     margin-top: 2px;
+    margin-left: 10px;
 }
 
 .TOC h3 {
     font-family: baskerville;
     color: #FFDDAA;
+    margin-top: 15px;
 }
 .TOC {
     float: right;
@@ -254,7 +258,8 @@ pre {
     padding-right: 20px;
     padding-left: 20px;
     min-width: 250px;
-    margin-top: 25px;
+    /* margin-top: 25px; */
+    margin-top: 50px;
     line-height: 1.8;
 }
 .TOC a {
