--- a/assets/style.css
+++ b/assets/style.css
@@ -102,6 +102,8 @@ code {
     /* color: #FFDDAA; */
     color: white;
     overflow-x: scroll;
+    display: inline-flex; /* dunno why this works....but neat */
+    max-width: 100%;
 }
 
 a {
@@ -307,6 +309,7 @@ li {
     font-size: 12px;
     flex: 1 0 auto;
     overflow-wrap: break-word;
+    max-width: calc(100% - 15px);
 }
 
 .time-edit {
