--- a/assets/style.css
+++ b/assets/style.css
@@ -105,10 +105,12 @@ code {
     /*display: inline-flex;*/ /* dunno why this works....but neat */
     max-width: 100%;
     display: inline-block;
-    margin-bottom: -7px;
+    margin-bottom: -8px;
+    margin-left: 3px;
+    margin-right: 3px;
 }
 div.sourceCode pre.sourceCode {
-    padding-bottom: 7px !important;
+    padding-bottom: 8px !important;
 }
 
 a {
